tests/lexer/string-has-unknown-escape-sequence.stderr
error: unknown escape sequence
 --> $DIR/string-has-unknown-escape-sequence.lox:1:5
  |
1 | "foo\z"
  |     ^^
